--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     background-color: #121214;
     background-image: url('./assets/img/bg-overlay.svg');
     background-position-x: center;
-    background-position-y: 55.6%;
+    background-position-y: -715px;
 }
 
 body * {
@@ -83,4 +83,10 @@ header {
     font-size: 36px;
     line-height: 125%;
     color: #e1e1e6;
+}
+
+#cards {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
