--- a/index.css
+++ b/index.css
@@ -4,11 +4,36 @@
     box-sizing: border-box;
 }
 
+:root {
+    --card-title-border-color: #746615;
+    --card-color-primary: #f7dd43;
+    --card-bg-color: #1d1c19;
+    --bg: url('./assets/img/bg-yellow.svg')
+}
+
+body.blue {
+    --card-title-border-color: #338af3;
+    --card-color-primary: #338af3;
+    --card-bg-color: #202024;
+    --bg: url('./assets/img/bg-blue.svg')
+}
+
+body.green {
+    --card-title-border-color: #b47c3f;
+    --card-color-primary: #b47c3f;
+    --card-bg-color: #1a1f18;
+    --bg: url('./assets/img/bg-green.svg')
+}
+
 body {
-    background-color: #121214;
-    background-image: url('./assets/img/bg-overlay.svg');
-    background-position-x: center;
-    background-position-y: -715px;
+    
+  /*background-color: #121214;
+    background-image: var(--bg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;*/
+
+    background: #121214 var(--bg) top center/cover no-repeat;
 }
 
 body * {
@@ -18,7 +43,9 @@ body * {
 #app {
 
     width: fit-content;
-    margin: 52px auto;
+    margin: auto;
+    padding-top: 52px;
+ 
 }
 
 header {
@@ -32,8 +59,8 @@ header {
     padding: 32px 23px;
     text-align: center;
 
-    background: #1d1c19;
-    border-bottom: 2px solid #f7dd43;
+    background: var(--card-bg-color);
+    border-bottom: 2px solid var(--card-color-primary);
     border-radius: 6px;
 }
 
@@ -43,7 +70,7 @@ header {
     justify-content: center;
 
     padding: 8px 16px;
-    border: 1px solid #746615;
+    border: 1px solid var(--card-title-border-color);
     border-radius: 6px;
 
     width: fit-content;
@@ -53,9 +80,11 @@ header {
     color: #f7dd43;
 }
 
-.card h2 spam {
+.card h2 span {
+    display: flex;
+    align-items: center;
     color: #e1e1e1;
-    font-size: 14px;
+    font-size: 16px;
     text-transform: uppercase;
 }
 
@@ -89,4 +118,35 @@ header {
     display: flex;
     flex-direction: column;
     gap: 32px;
+}
+
+.card h2:hover,
+.card ul li strong:hover,
+.card ul li img:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+}
+
+.card {
+    animation: appear 2s;
+}
+
+@keyframes appear {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@media (min-width: 700px) {
+    #cards {
+        max-width: 670px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 }
