--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body.green {
 }
 
 body {
-    
+
   /*background-color: #121214;
     background-image: var(--bg);
     background-position: top center;
@@ -45,6 +45,7 @@ body * {
     width: fit-content;
     margin: auto;
     padding-top: 52px;
+    padding-bottom: 52px;
  
 }
 
